--- a/package.json
+++ b/package.json
@@ -6,25 +6,15 @@
     "keystone": "~0.3.0",
     "async": "~0.9.0",
     "underscore": "~1.7.0",
-    "moment": "~2.8.1",
-    "cloudinary": "^1.0.12",
-    "express-handlebars": "~1.1.0",
-    "handlebars": "~2.0.0",
+    "consolidate": "~0.10.0",
+    "nunjucks": "~1.0.5", 
     "dotenv": "~0.4.0"
   },
   "devDependencies": {
-    "grunt": "~0.4.4",
-    "grunt-express-server": "~0.4.17",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-jshint": "~0.7.1",
+    "gulp": "~3.7.0",
+    "gulp-jshint": "~1.9.0",
     "jshint-stylish": "~0.1.3",
-    "load-grunt-tasks": "~0.4.0",
-    "load-grunt-configs": "^0.4.1",
-    "grunt-node-inspector": "~0.1.5",
-    "time-grunt": "~0.3.1",
-    "grunt-concurrent": "~0.5.0",
-    "grunt-nodemon": "~0.2.1",
-    "open": "0.0.5"
+    "gulp-watch": "~0.6.5"
   },
   "engines": {
     "node": ">=0.10.22",
