--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "dotenv": "~0.4.0"
   },
   "devDependencies": {
+    "babel-eslint": "^3.0.1",
+    "eslint": "^0.20.0",
+    "eslint-plugin-react": "^2.2.0",
     "gulp": "~3.7.0",
+    "gulp-eslint": "^0.11.1",
     "gulp-jshint": "~1.9.0",
-    "jshint-stylish": "~0.1.3",
-    "gulp-watch": "~0.6.5"
+    "gulp-watch": "~0.6.5",
+    "jshint-stylish": "~0.1.3"
   },
   "engines": {
     "node": ">=0.10.22",
