--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-eslint": "^0.11.1",
     "gulp-jshint": "~1.9.0",
     "gulp-watch": "~0.6.5",
+    "iis": "^0.2.0",
     "jshint-stylish": "~0.1.3"
   },
   "engines": {
