--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "keystone": "~0.3.10",
     "async": "~0.9.0",
-    "underscore": "~1.7.0",
-    "moment": "~2.8.1",
     "cloudinary": "^1.0.12",
+    "dotenv": "~0.4.0",
     "express-handlebars": "~1.1.0",
     "handlebars": "~2.0.0",
-    "dotenv": "~0.4.0"
+    "keystone": "~0.3.10",
+    "moment": "~2.8.1",
+    "request": "^2.55.0",
+    "underscore": "~1.7.0"
   },
   "devDependencies": {
     "babel-eslint": "^3.0.1",
